Changes since 1.0:

* Flood manual (DocBook based). [Jacek Prucia]

* Added <baseurl> element. When present, it's contents are copied in front
  of every <url> element, which makes relative urllist's possible.
  [Jacek Prucia]

* Added basic auth support. When user and passowrd attributes of <url>
  element are present and non-empty, flood sends auth data with request.
  [Jacek Prucia]

* Added generic_fullresp_recv_resp() to force full response.
  [Phi-Long Tran <ptran@pobox.com>]

* Fixed compiler warning about signed/unsigned mismatch in generic_recv_resp.
  [Phi-Long Tran <ptran@pobox.com>]

* Include correct header to import defintion of apr_pstrmemdup in
  flood_socket_keepalive.c.  [Phi-Long Tran <ptran@pobox.com>]

* Namespace protect expand_param_e enum values to not conflict with Win32
  headers.  [Phi-Long Tran <ptran@pobox.com>]

* Added error handling for failed config-file open.
  [Phi-Long Tran <ptran@pobox.com>]

* Fix Win32 crash resulting from strtoll() macro
  [Phi-Long Tran <ptran@pobox.com>]

* Catch some badly formed URLs and exit instead of later crashing.
  [Jacek Prucia <jacek.prucia@7bulls.com>]

* Fix tab formatting in some analysis scripts.
  [Reini Urban <rurban@inode.at>]

Changes since milestone-03:

* Revamp keepalive_recv_resp to use the APR table API.  This allows true
  case insensitivity with the response headers.  [Justin Erenkrantz]

* Support autoconf-2.5+.  [Justin Erenkrantz]

* Switch to new apr_poll() API.  [Justin Erenkrantz]

* Stop using the apr_lock.h API and start using apr_thread_mutex.h
  instead.  [Aaron Bannert]

* Remove the USE_RW_LOCK_FOR_SSL conditional compiles since we
  didn't have an autoconf feature test for it nor was it really
  giving us any benefit.  [Aaron Bannert]

* Add ability to detect when the server has closed the connection instead
  of erroring out (think Keep-Alive).  [Justin Erenkrantz]

* Add chunked support.  [Justin Erenkrantz]

* Add detection of CAPATH variable for RedHat installs.